<resources>
    <string name="app_name">Denhan</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sigin_in_text">Sign In</string>
    <string name="invalid_email_error">Invalid Email id</string>
    <string name="password_error">Req. 7–30 chars</string>
    <string name="open_text">Open</string>
    <string name="in_progress_text">In Progress</string>
    <string name="complete_text">Completed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_maintaince">Maintenance</string>
    <string name="network_unavailable">Network connection is not working, please check internet connection</string>
    <string name="unauthorize_error">Unauthorized</string>
    <string name="common_api_error">Something went wrong</string>
    <string name="progress_tittle_text">Request</string>
    <string name="server_request_text">Please wait, you are in progress</string>
    <string name="no_job_assigned_text">No Job assigned to you</string>
    <string name="no_job_started_yet">No job started yet</string>
    <string name="no_completed_jobs_text">No jobs are completed yet</string>
    <string name="job_detail_text">Job Details</string>
    <string name="special_instruction">Special Instruction</string>
    <string name="detail_note_text">Detail Note</string>
    <string name="task_text">Tasks</string>
    <string name="not_completed_status">Not Started</string>
    <string name="completed_status">Completed</string>
    <string name="add_task_text">Add Task</string>
    <string name="title_hint_text">Title</string>
    <string name="description_text">Description</string>
    <string name="type_here_text">Type here...</string>
    <string name="cancel_text">Cancel</string>
    <string name="submit_text">Submit</string>
    <string name="job_title_require">Job title required</string>
    <string name="okay_text">Okay</string>
    <string name="attachment_text">Attachment</string>
    <string name="no_attachment_text">There is no attachment in this job</string>
    <string name="owner_not_available_text">Owner Not available</string>
    <string name="add_new_log_text">Add New Log</string>
    <string name="no_log_added_text">No log added</string>
    <string name="add_comment_text">Add Your Comment</string>
    <string name="added_text_hint">Added</string>
    <string name="add_attachment_text">Add Attachment</string>
    <string name="add_comment_error">Please add the comment for new logs</string>
    <string name="select_image_error">Please capture live picture</string>
    <string name="task_detail_text">Task Details</string>
    <string name="tap_to_start_text">Tap To Start Task</string>
    <string name="task_description_text">Task Description</string>
    <string name="attachment_before_work">Attachment before work completion</string>
    <string name="attachment_after_work">Attachment after work completion</string>
    <string name="bill_attachment_text">Bill Attachments</string>
    <string name="add_labour_charges"><![CDATA[Add Labour Charges & Material Cost]]></string>
    <string name="labour_charger_text">Labour charges</string>
    <string name="enter_text">Enter</string>
    <string name="material_cost">Material Cost</string>
    <string name="alert_text">Alert</string>
    <string name="task_not_start_error">You need start task first</string>
    <string name="task_start_alert">Are you sure, you want to start this task?</string>
    <string name="task_save_instruction">You have not mark task complete. The task end time will not be saved</string>
    <string name="will_set_text">Will Set</string>
    <string name="mark_all_complete_text">Mark All Complete</string>
    <string name="mark_as_complete">Mark as complete</string>
    <string name="logout_instruction">Are you sure want to Log Out?</string>
    <string name="location_permission_text">You have denied Denhan to seek your current location. Kindly enable this from setting to calculate closet from properties being maintained in case of emergency call.</string>
    <string name="turn_on_text">Turn On</string>
    <string name="sign_please_text">Sign Please</string>
    <string name="hours_text">Hours</string>
    <string name="Minute_text">Minutes</string>
    <string name="landlord_text">Landlord/Tanent Signature</string>
    <string name="retake_text">Retake</string>
    <string name="no_update_job_find">No updated job found</string>
    <string name="hours_error">Maximum number of hours can be enter is 99</string>
    <string name="minute_error">Maximum number of minutes can be enter is 59</string>
    <string name="elpase_time_error">Please enter the total elapsed time first</string>
    <string name="signature_error">Please do signature first</string>
    <string name="comment_length_error">Comment Req. 1–512 chars</string>


</resources>
