<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.card.MaterialCardView
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginStartEnd"
                android:layout_marginTop="@dimen/mtrl_card_spacing"
                android:layout_marginRight="@dimen/marginStartEnd"
                android:minHeight="@dimen/_100sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/muli_bold"
                        android:gravity="center"
                        android:text="@string/add_task_text"
                        android:textColor="@color/blackColor"
                        android:textSize="@dimen/meduimTextSize" />



                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtInoutTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/_5sdp"
                            android:hint="@string/title_hint_text"
                            android:textSize="@dimen/smallTextSize"
                            android:textColor="@color/blackColor"
                            android:fontFamily="@font/muli_regular"
                            android:inputType="text" />


                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginTopBetweenTextView"
                        android:fontFamily="@font/muli_bold"
                        android:text="@string/description_text"
                        android:textColor="@color/blackColor"
                        android:textSize="@dimen/meduimTextSize" />


                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/rounded_corner"
                        android:fontFamily="@font/muli_regular"
                        android:gravity="top"
                        android:lineSpacingExtra="0dp"
                        android:textSize="@dimen/smallTextSize"
                        android:textColor="@color/blackColor"
                        android:hint="@string/type_here_text"
                        android:minHeight="@dimen/_100sdp"
                        android:padding="@dimen/_5sdp" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginBetweenEditText"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/cancelButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/marginBetweenLabelAndButton"
                            android:layout_marginEnd="@dimen/marginStartEnd"
                            android:layout_weight="0.5"
                            android:fontFamily="@font/muli_semi_bold"
                            android:padding="10dp"
                            android:text="@string/cancel_text"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                            android:textColor="@color/whiteColor"
                            android:theme="@style/ButtonTheme"
                            app:cornerRadius="500dp"
                            app:layout_constraintTop_toBottomOf="@+id/input_password" />

                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/submitButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/marginStartEnd"
                            android:layout_marginTop="@dimen/marginBetweenLabelAndButton"
                            android:layout_weight="0.5"
                            android:fontFamily="@font/muli_semi_bold"
                            android:padding="10dp"
                            android:text="@string/submit_text"
                            android:textAllCaps="false"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                            android:textColor="@color/whiteColor"
                            android:theme="@style/AppTheme"
                            app:cornerRadius="500dp"
                            app:layout_constraintTop_toBottomOf="@+id/input_password" />


                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
