<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>

        <variable
                name="viewModel"
                type="app.denhan.view.subtask.SubTaskViewModel" />

    </data>
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/redColor1">

    <RelativeLayout
            android:id="@+id/topLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?actionBarSize"
            android:background="@color/redColor1"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tittleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:textColor="@color/whiteColor"
                android:layout_centerVertical="true"
                android:fontFamily="@font/muli_bold"
                android:textSize="@dimen/largeTextSize"
                android:text="@string/task_detail_text"/>
        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backImage"
                android:layout_width="?actionBarSize"
                android:layout_height="?actionBarSize"
                android:padding="@dimen/topIconPadding"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_icon_back"/>
        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/saveButton"
                android:layout_width="?actionBarSize"
                android:layout_height="?actionBarSize"
                android:layout_alignParentRight="true"
                android:padding="@dimen/topIconPadding"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_icon_tick"
                android:visibility="@{viewModel.savButtonVisibleStatus.booleanValue()? View.VISIBLE : View.GONE, default=visible}" />
    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/startTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="?actionBarSize"
            android:layout_marginEnd="?actionBarSize"
            android:fontFamily="@font/muli_semi_bold"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/topLayout"
            android:layout_marginTop="@dimen/_5sdp"
            android:textAllCaps="false"
            android:text="@string/tap_to_start_text"
            android:textAlignment="center"
            android:textColor="@color/whiteColor"
            android:background="@drawable/button_bg" />
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/startTask"
            android:background="@drawable/top_corner_round_bg"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent">
        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/mainLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/marginStartEnd">
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/task_description_text"
                        android:fontFamily="@font/muli_semi_bold"
                        android:textSize="@dimen/meduimTextSize"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/blackColor" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/muli_regular"
                        android:textSize="@dimen/smallTextSize"
                        android:text="@{viewModel.taskDescription}"
                        app:layout_constraintTop_toBottomOf="@+id/text1"
                        android:layout_marginTop="@dimen/listMarginTop"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/blackNintyOpc" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/textDescription"
                        android:layout_marginTop="@dimen/marginBetweenListAndText"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/add_comment_text"
                        android:fontFamily="@font/muli_semi_bold"
                        android:textColor="@color/blackColor"
                        android:textSize="@dimen/meduimTextSize"/>
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtComment"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_110sdp"
                        android:layout_marginTop="@dimen/marginTopBetweenTextView"
                        android:background="@drawable/rounded_corner"
                        android:fontFamily="@font/muli_regular"
                        android:gravity="top"
                        android:textSize="@dimen/smallTextSize"
                        android:text="@{viewModel.comment}"
                        android:overScrollMode="always"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical"
                        android:hint="@string/type_here_text"
                        android:minHeight="@dimen/_100sdp"
                        android:padding="@dimen/_5sdp"
                        android:textColor="@color/blackColor"
                        android:textColorHint="@color/blackNintyOpc"
                        app:layout_constraintTop_toBottomOf="@+id/text2" />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/edtComment"
                        android:layout_marginTop="@dimen/marginBetweenListAndText"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/attachment_before_work"
                        android:fontFamily="@font/muli_semi_bold"
                        android:textColor="@color/blackColor"
                        android:textSize="@dimen/meduimTextSize"/>
                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/beforeCompletionList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="?actionBarSize"
                        app:layout_constraintTop_toBottomOf="@+id/text3"/>
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/beforeCompletionList"
                        android:layout_marginTop="@dimen/marginBetweenListAndText"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/attachment_after_work"
                        android:fontFamily="@font/muli_semi_bold"
                        android:textColor="@color/blackColor"
                        android:textSize="@dimen/meduimTextSize"/>
                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/afterCompletionList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="?actionBarSize"
                        app:layout_constraintTop_toBottomOf="@+id/text4"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/afterCompletionList"
                        android:layout_marginTop="@dimen/marginBetweenListAndText"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/bill_attachment_text"
                        android:fontFamily="@font/muli_semi_bold"
                        android:textColor="@color/blackColor"
                        android:textSize="@dimen/meduimTextSize"/>
                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/billAttachmentList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="?actionBarSize"
                        app:layout_constraintTop_toBottomOf="@+id/text5"/>
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/billAttachmentList"
                        android:layout_marginTop="@dimen/marginBetweenListAndText"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/add_labour_charges"
                        android:fontFamily="@font/muli_semi_bold"
                        android:textColor="@color/blackColor"
                        android:textSize="@dimen/meduimTextSize"/>


                <LinearLayout
                        android:id="@+id/costLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/text6"
                        android:weightSum="2"
                        android:layout_marginTop="@dimen/marginBetweenListAndText"
                        android:orientation="horizontal">

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/muli_regular"
                                android:text="@string/labour_charger_text"
                                android:textColor="@color/blackColor"
                                android:textSize="@dimen/smallTextSize" />

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edtLabourCharge"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/marginTopBetweenTextView"
                                android:background="@drawable/rounded_corner"
                                android:fontFamily="@font/muli_regular"
                                android:gravity="top"
                                android:drawableLeft="@drawable/ic_pound"
                                android:layout_gravity="center"
                                android:drawablePadding="@dimen/_5sdp"
                                android:layout_marginStart="@dimen/_5sdp"
                                android:layout_marginEnd="@dimen/_5sdp"
                                android:hint="@string/enter_text"
                                android:text="@={viewModel.labourCost}"
                                android:padding="@dimen/_5sdp"
                                android:inputType="numberDecimal"
                                android:textColor="@color/blackNintyOpc"
                                app:layout_constraintTop_toBottomOf="@+id/text2" />


                    </LinearLayout>
                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">

                        <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/muli_regular"
                                android:text="@string/material_cost"
                                android:textColor="@color/blackColor"
                                android:textSize="@dimen/smallTextSize" />

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edtMaterialCost"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/marginTopBetweenTextView"
                                android:background="@drawable/rounded_corner"
                                android:fontFamily="@font/muli_regular"
                                android:gravity="top"
                                android:drawableLeft="@drawable/ic_pound"
                                android:drawablePadding="@dimen/_5sdp"
                                android:layout_gravity="center"
                                android:layout_marginStart="@dimen/_5sdp"
                                android:layout_marginEnd="@dimen/_5sdp"
                                android:hint="@string/enter_text"
                                android:padding="@dimen/_5sdp"
                                android:text="@={viewModel.materialCost}"
                                android:inputType="numberDecimal"
                                android:textColor="@color/blackNintyOpc"
                                app:layout_constraintTop_toBottomOf="@+id/text2" />
                    </LinearLayout>
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/markAllComplete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/costLayout"
                        android:text="@string/mark_as_complete"
                        android:visibility="@{viewModel.markAllCompleteStatus.booleanValue()? View.GONE : View.VISIBLE, default=visible}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="@dimen/marginBetweenEditText"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
